--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>Hello</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#673Ab6">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
